--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-4 col-xs-offset-2">
-    <ul  id="nav">
-      <li><a href="#">Voyage</a></li>
-      <li><a href="piedepage">Pied de page</a></li>
-      <li><a href="https://wildcodeschool.fr/">Wild Code School</a></li>
-    </ul>
+            <ul id="nav">
+              <li><a href="#">Voyage</a></li>
+              <li><a href="#piedepage">footer</a></li>
+              <li><a href="https://wildcodeschool.fr">Wild Code School</a></li>
+
+            </ul>
         </div>
       </div>
     </div>
@@ -36,7 +37,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-6 col-xs-offset-3">
-      <h1>Checkpoint 1 Balthazar Caillaud</h1>
+              <h1>Checkpoint 1 Balthazar Caillaud</h1>
           </div>
         </div>
       </div>
@@ -47,7 +48,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-6 col-xs-offset-2">
-      <h2>Mon dernier voyage</h2>
+            <h2>Mon dernier voyage</h2>
           </div>
         </div>
       </div>
@@ -55,7 +56,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-6">
-      <p>Le Cambodge, un territoire dépaysant...</p>
+            <p>Le Cambodge, un territoire dépaysant...</p>
           </div>
         </div>
       </div>
@@ -63,7 +64,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-3">
-      <img src="https://cdn.pixabay.com/photo/2017/08/31/14/28/landscape-2700908_960_720.jpg" alt="beach heaven">
+            <img src="https://cdn.pixabay.com/photo/2017/08/31/14/28/landscape-2700908_960_720.jpg" alt="beach heaven">
           </div>
         </div>
       </div>
@@ -71,7 +72,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-3">
-      <img src="https://cdn.pixabay.com/photo/2017/05/08/09/01/botanical-2294858_960_720.jpg" alt="botanical lights">
+            <img src="https://cdn.pixabay.com/photo/2017/05/08/09/01/botanical-2294858_960_720.jpg" alt="botanical lights">
           </div>
         </div>
       </div>
@@ -81,42 +82,44 @@
         <div class="row">
           <div class="col-xs-12">
 
-    <footer id="piedepage">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-3">
+        <footer id="piedepage">
+            <div class="container">
+              <div class="row">
+                <div class="col-xs-3">
 
-        <form class="contact" action="index.html" method="post">
-        <p>
-        <label>First name</label><br>
-        <input type="text" name="first_name">
-        </p>
+                  <form class="contact" action="index.html" method="post">
+                    <p>
+                      <label>First name</label><br>
+                      <input type="text" name="first_name">
+                    </p>
 
-        <p>
-        <label>Last name</label><br>
-        <input type="text" name="last_name">
-        </p>
+                    <p>
+                      <label>Last name</label><br>
+                      <input type="text" name="last_name">
+                    </p>
 
-        <p>
-        <label>Email</label><br>
-        <input type="text" name="email">
-        </p>
+                    <p>
+                      <label>Email</label><br>
+                      <input type="text" name="email">
+                    </p>
 
-      </form>
+                  </form>
+                </div>
+
+                <div class="col-xs-3 col-xs-offset-1">
+                  <a class="github" href="https://github.com/Hotsockets">Mon profil Github</a>
+                </div>
+
+                <div class="col-xs-3 col-xs-offset-1">
+                  <a class="odyssey" href="https://odyssey.wildcodeschool.fr/users/2042">Mon profil Odyssey</a>
+                </div>
+              </div>
             </div>
+      </footer>
 
-          <div class="col-xs-3 col-xs-offset-1">
-      <a class="github" href="https://github.com/Hotsockets">Mon profil Github</a>
           </div>
-          <div class="col-xs-3 col-xs-offset-1">
-      <a class="odyssey" href="https://odyssey.wildcodeschool.fr/users/2042">Mon profil Odyssey</a>
-            </div>
-
-      </div>
-    </footer>
         </div>
       </div>
-    </div>
   </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
